# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\V1\ArticleController;
 use App\Http\Controllers\V1\AuthController;
+use App\Http\Controllers\V1\PersonalizedFeedController;
 use App\Http\Controllers\V1\PreferenceController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -12,20 +13,24 @@ Route::get('/user', function (Request $request) {
 
 
 Route::prefix('v1')->group(function () {
-    Route::post('/auth/login', [AuthController::class, 'login']);
-    Route::post('/auth/register', [AuthController::class, 'registration']);
-    Route::post('/auth/reset-password', [AuthController::class, 'resetPassword']);
-    Route::post('/auth/set-password', [AuthController::class, 'setPassword']);
-    Route::middleware('auth:sanctum')->post('/auth/logout', [AuthController::class, 'logout']);
+    Route::post('/auth/login', [AuthController::class, 'login'])->name('auth.login');
+    Route::post('/auth/register', [AuthController::class, 'registration'])->name('auth.register');
+    Route::post('/auth/reset-password', [AuthController::class, 'resetPassword'])->name('auth.reset-password');
+    Route::post('/auth/set-password', [AuthController::class, 'setPassword'])->name('auth.set-password');
+    Route::middleware('auth:sanctum')->post('/auth/logout', [AuthController::class, 'logout'])->name('auth.logout');
 
     // Article routes
-    Route::get('/articles', [ArticleController::class, 'index']);
-    Route::get('/articles/{article}', [ArticleController::class, 'show']);
+    Route::get('/articles/{article}', [ArticleController::class, 'show'])->name('articles.show');
+    Route::get('/articles', [ArticleController::class, 'index'])->name('articles.index');
 
-    // Preference routes
+
     Route::middleware('auth:sanctum')->group(function () {
-        Route::get('/preferences', [PreferenceController::class, 'index']);
-        Route::post('/preferences', [PreferenceController::class, 'update']);
+        // Preference routes
+        Route::get('/preferences', [PreferenceController::class, 'index'])->name('preferences.index');
+        Route::post('/preferences', [PreferenceController::class, 'update'])->name('preferences.update');
+
+        // Personalized feed routes
+        Route::get('/personalized-feed', [PersonalizedFeedController::class, 'index'])->name('personalized-feed.index');
     });
 
 });
